添加了模型评估

--- a/PyTorch学习-梯度下降和反向传播.ipynb
+++ b/PyTorch学习-梯度下降和反向传播.ipynb
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28fe5f58",
+   "id": "f74d0d78",
    "metadata": {},
    "source": [
     "## 使用PyTorch的API完成线性回归模型"
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2096066a",
+   "id": "d818138b",
    "metadata": {},
    "source": [
     "### 1. nn.Module\n",
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032d1b9c",
+   "id": "d02da616",
    "metadata": {},
    "source": [
     "注：<br>\n",
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "40ea025b",
+   "id": "b779f6a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd176ae7",
+   "id": "d4da3578",
    "metadata": {},
    "source": [
     "## 2.损失函数\n",
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb7b588",
+   "id": "46f18331",
    "metadata": {},
    "source": [
     "## 3.优化器类\n",
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e93cb8",
+   "id": "d046e0d3",
    "metadata": {},
    "source": [
     "## 线性回归完整Demo"
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9b592a06",
+   "id": "737bf41e",
    "metadata": {},
    "outputs": [
     {
@@ -1679,12 +1679,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb099d77",
+   "metadata": {},
+   "source": [
+    "## 模型评估"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "14ab72af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyLr(\n",
+       "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 当前模型默认为训练,使用eval方法设置模型为预测模式\n",
+    "mymodel.eval() "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7f6f29",
+   "id": "f095b16d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predict = mymodel(x)\n",
+    "predict = predict.data.numpy()\n",
+    "plt.scatter(x.data.numpy)"
+   ]
   }
  ],
  "metadata": {
